Adicionando estrutura inicial

--- a/Curriculo/curriculo.html
+++ b/Curriculo/curriculo.html
@@ -8,7 +8,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@700&family=Raleway:wght@400;500&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="curriculo.css">
         <script src="script.js"></script>
         
         <title>Currículo Wanderson R. Dutra</title>
