--- a/contatos.html
+++ b/contatos.html
@@ -20,7 +20,7 @@
                 <nav class="header">
                     <img class="logo" src="../img/logo.png" alt="logo">
                     <ul class="nav-links">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="home.html">Home</a></li>
                         <li><a href="sobreMim.html">Sobre mim</a></li>
                         <li><a href="projetos.html">Projetos</a></li>
                         <li><a href="contatos.html">Contatos</a></li>
