--- a/sobreMim.html
+++ b/sobreMim.html
@@ -19,7 +19,7 @@
                 <nav class="header">
                     <img class="logo" src="../img/logo.png" alt="logo">
                     <ul class="nav-links">
-                        <li><a href="Index.html">Home</a></li>
+                        <li><a href="home.html">Home</a></li>
                         <li><a href="sobreMim.html">Sobre mim</a></li>
                         <li><a href="projetos.html">Projetos</a></li>
                         <li><a href="contatos.html">Contatos</a></li>
@@ -27,16 +27,11 @@
                 </nav>
     <!--Fin da barrea de menus-->          
     <!--Inicio do corpo central-->            
-                <h1>Carreira</h1>
+                <h1>Desenvolvedor Web</h1>
                 <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam commodi, sunt quaerat magnam non recusandae fuga beatae deleniti sapiente rem labore nam impedit ratione quis earum ipsa quasi id fugit veniam officia at ullam voluptatibus alias dolorem! Quaerat animi sint necessitatibus molestiae a quae numquam nesciunt culpa deleniti. Soluta, iure.
+                    Olá, meu nome é Wanderson Dutra atuando na área de IT desde 2012 como Suporte Técnico, Infraestrutura, BackOffice HelpDesk, e atualmente migrei para programação em Desenvolvimento Web Front-End. Desenvolvendo one-page e sites utilizando Html, Css, JavaScript e venho evoluindo cada dia mais com novas skills como o react.
                 </p>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam commodi, sunt quaerat magnam non recusandae fuga beatae deleniti sapiente rem labore nam impedit ratione quis earum ipsa quasi id fugit veniam officia at ullam voluptatibus alias dolorem! Quaerat animi sint necessitatibus molestiae a quae numquam nesciunt culpa deleniti. Soluta, iure.
-                </p>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam commodi, sunt quaerat magnam non recusandae fuga beatae deleniti sapiente rem labore nam impedit ratione quis earum ipsa quasi id fugit veniam officia at ullam voluptatibus alias dolorem! Quaerat animi sint necessitatibus molestiae a quae numquam nesciunt culpa deleniti. Soluta, iure.
-                </p>
+
     <!--Fim do corpo central-->  
             </div>
         </section>
