--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div class="Container">
     <!-- Inicio barra de menus-->            
                 <nav class="header">
-                    <img class="logo" src="logo1.png" alt="logo">
+                    <img class="logo" src="/Logo1.png" alt="logo">
                     <ul class="nav-links">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="sobreMim.html">Sobre mim</a></li>
@@ -32,7 +32,7 @@
                 <div class="corpo-central">
                     <div class="home-img">
                         <div class="img-box">
-                            <img class="emoji" src="emojii.png" alt="imagem logo">
+                            <img class="emoji" src="/emojii.png" alt="imagem logo">
                         </div>
                     </div>
                     <div class="texto">
