--- a/contatos.html
+++ b/contatos.html
@@ -18,7 +18,7 @@
             <div class="Container">
     <!-- Inicio barra de menus-->            
                 <nav class="header">
-                    <img class="logo" src="../img/logo.png" alt="logo">
+                    <img class="logo" src="/logo.png" alt="logo">
                     <ul class="nav-links">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="sobreMim.html">Sobre mim</a></li>
@@ -29,7 +29,16 @@
                 </nav>
     <!--Fin da barrea de menus-->          
     <!--Inicio do corpo central-->            
-    <h1>Carreira</h1>
+    <h1>Em produção</h1>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam commodi, sunt quaerat magnam non recusandae fuga beatae deleniti sapiente rem labore nam impedit ratione quis earum ipsa quasi id fugit veniam officia at ullam voluptatibus alias dolorem! Quaerat animi sint necessitatibus molestiae a quae numquam nesciunt culpa deleniti. Soluta, iure.
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam commodi, sunt quaerat magnam non recusandae fuga beatae deleniti sapiente rem labore nam impedit ratione quis earum ipsa quasi id fugit veniam officia at ullam voluptatibus alias dolorem! Quaerat animi sint necessitatibus molestiae a quae numquam nesciunt culpa deleniti. Soluta, iure.
+    </p>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam commodi, sunt quaerat magnam non recusandae fuga beatae deleniti sapiente rem labore nam impedit ratione quis earum ipsa quasi id fugit veniam officia at ullam voluptatibus alias dolorem! Quaerat animi sint necessitatibus molestiae a quae numquam nesciunt culpa deleniti. Soluta, iure.
+    </p>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam commodi, sunt quaerat magnam non recusandae fuga beatae deleniti sapiente rem labore nam impedit ratione quis earum ipsa quasi id fugit veniam officia at ullam voluptatibus alias dolorem! Quaerat animi sint necessitatibus molestiae a quae numquam nesciunt culpa deleniti. Soluta, iure.
     </p>
