atualização de arquivos

--- a/projetos.html
+++ b/projetos.html
@@ -18,7 +18,7 @@
             <div class="Container">
     <!-- Inicio barra de menus-->            
                 <nav class="header">
-                    <img class="logo" src="/logo.png" alt="logo">
+                    <img class="logo" src="./Logo1.png" alt="logo">
                     <ul class="nav-links">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="sobreMim.html">Sobre mim</a></li>
@@ -31,16 +31,42 @@
     <!--Inicio do corpo central-->            
                 <div class="projetos">
                     <div class="barberShop">
-                        <a href="./BarberShop/index.html">Barber Shop</a>
+                        <img class="img-projetos" src="./Logo1.png" alt="foto">
+                        <a class="link-projetos" href="./BarberShop/index.html">Barber Shop</a>
                     </div>
+
                     <div class="curriculo">
-                        <a href="./Curriculo/curriculo.html">Curriculo</a>
+                        <img class="img-projetos" src="./Logo1.png" alt="foto">
+                        <a class="link-projetos" href="./Curriculo/curriculo.html">Curriculo</a>
                     </div>
-                    <div class="fichaCadastro">
-                        <a href="./FichaCadastro/index.html">Ficha Cadastro</a>
+
+                    <div class="cadastro">
+                        <img class="img-projetos" src="./Logo1.png" alt="Foto">
+                        <a class="link-projetos" href="./FichaCadastro/index.html"> Cadastro</a>
                     </div>
-                    <div class="menuInterativo">
-                        <a href="./ProjetoMenu/">Menu Interativo</a>
+
+                    <div class="projetoMenu">
+                        <img class="img-projetos" src="./Logo1.png" alt="Foto">
+                        <a class="link-projetos" href="./ProjetoMenu/">Menu Interativo</a>
+                    </div>
+
+                    <div class="toDoList">
+                        <img class="img-projetos" src="./Logo1.png" alt="Foto">
+                        <a class="link-projetos" href="./ToDoList/index.html">Lista de Tarefas</a>
+                    </div>
+
+                    <div class="toDoList">
+                        <img class="img-projetos" src="./Logo1.png" alt="Foto">
+                        <a class="link-projetos" href="./ToDoList/index.html">Lista de Tarefas</a>
+                    </div>
+
+                    <div class="toDoList">
+                        <img class="img-projetos" src="./Logo1.png" alt="Foto">
+                        <a class="link-projetos" href="./ToDoList/index.html">Lista de Tarefas</a>
+                    </div>
+                    <div class="toDoList">
+                        <img class="img-projetos" src="./Logo1.png" alt="Foto">
+                        <a class="link-projetos" href="./ToDoList/index.html">Lista de Tarefas</a>
                     </div>
                     
                 </div>
