--- a/contatos.html
+++ b/contatos.html
@@ -18,7 +18,7 @@
             <div class="Container">
     <!-- Inicio barra de menus-->            
                 <nav class="header">
-                    <img class="logo" src="/logo.png" alt="logo">
+                    <img class="logo" src="./Logo1.png" alt="logo">
                     <ul class="nav-links">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="sobreMim.html">Sobre mim</a></li>
