--- a/projetos.html
+++ b/projetos.html
@@ -40,9 +40,9 @@
                         <a class="link-projetos" href="./Curriculo/curriculo.html">Curriculo</a>
                     </div>
 
-                    <div class="cadastro">
+                    <div class="fichaCadastro">
                         <img class="img-projetos" src="./Logo1.png" alt="Foto">
-                        <a class="link-projetos" href="./FichaCadastro/index.html"> Cadastro</a>
+                        <a class="link-projetos" href="./FichaCadastro/index.html"> Ficha de Cadastro</a>
                     </div>
 
                     <div class="projetoMenu">
@@ -54,20 +54,8 @@
                         <img class="img-projetos" src="./Logo1.png" alt="Foto">
                         <a class="link-projetos" href="./ToDoList/index.html">Lista de Tarefas</a>
                     </div>
+                    
 
-                    <div class="toDoList">
-                        <img class="img-projetos" src="./Logo1.png" alt="Foto">
-                        <a class="link-projetos" href="./ToDoList/index.html">Lista de Tarefas</a>
-                    </div>
-
-                    <div class="toDoList">
-                        <img class="img-projetos" src="./Logo1.png" alt="Foto">
-                        <a class="link-projetos" href="./ToDoList/index.html">Lista de Tarefas</a>
-                    </div>
-                    <div class="toDoList">
-                        <img class="img-projetos" src="./Logo1.png" alt="Foto">
-                        <a class="link-projetos" href="./ToDoList/index.html">Lista de Tarefas</a>
-                    </div>
                     
                 </div>
 
