Atualização de css

--- a/Curriculo/curriculo.html
+++ b/Curriculo/curriculo.html
@@ -37,9 +37,8 @@
                 </a>
             </div>
             <div>
-
                 <p>
-                    Olá, meu nome é <b class="nome">Wanderson R. Dutra</b> sou focado em desenvolvimento web, Brasileiro que mora em Lisboa - Portugal.
+                    Olá, meu nome é <b class="nome">Wanderson Dutra</b> atuando na área de IT desde 2012 como Suporte Técnico, Infraestrutura, BackOffice HelpDesk, e atualmente migrei para programação em Desenvolvimento Web Front-End. Desenvolvendo one-page e sites utilizando Html, Css, JavaScript e venho evoluindo cada dia mais com novas skills como o react.
                 </p>
 
                 <h3>Principais Habilidades</h3>
@@ -47,24 +46,33 @@
                         <li>HTML5</li>
                         <li>Css3</li>    
                         <li>JavaScript</li>
+                        <li>Git.</li>
+                        <li>React.</li>
                         
                     </ul>
-                <h3>Outras coisas que gosto de fazer.</h3>
+                <h3>Educação e Formação.</h3>
                 <p>
-                    Atualmente tenho focado todo o meu tempo livre para aprender a desenvolver códigos mais limpos e estáveis para o desenvolvimento web e móveis, explorando e implementando aplicativos Móveis e Web.    
+                    Formação FullStack – JavaScript. Curso completo online: HTML | CSS | JAVASCRIPT | NODE.JS | REACT | GIT | NEXT.JS
                 </p>
 
-                <h3>Certifcação</h3>
-                <ol type="a">
+                
+                <ol>
                     <li>Certificação Montagem e Manutenção de Computadores.</li>
                     <li>Operador de Computadores Linux.</li>
                     <li>Html5/Css3.</li>
                     <li>JavaScript.</li>
+
                 </ol>
 
                 <h3>Experiência</h3>
                 <ul class="jobs-list">
                     <li>
+                        <h4>Area Display</h4>
+                        <h5>Montador de stands.</h5>
+                        <p>
+                            Construção, manutenção e montagem de stands em diversas feiras em Portugal, Alemanha, Itália entre outros países daeuropa. Responsável na logística do evento como: transporte, hotel, alimentação e organização da entrega do stand para o cliente final.
+                        </p>
+
                         <h4>NovaCap</h4>
                         <h5>Manutenção e Reparação de Computadores</h5>
                         <p>
