--- a/contatos.html
+++ b/contatos.html
@@ -28,19 +28,41 @@
                 </nav>
     <!--Fin da barrea de menus-->          
     <!--Inicio do corpo central-->            
-    <h1>Em produção</h1>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam commodi, sunt quaerat magnam non recusandae fuga beatae deleniti sapiente rem labore nam impedit ratione quis earum ipsa quasi id fugit veniam officia at ullam voluptatibus alias dolorem! Quaerat animi sint necessitatibus molestiae a quae numquam nesciunt culpa deleniti. Soluta, iure.
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam commodi, sunt quaerat magnam non recusandae fuga beatae deleniti sapiente rem labore nam impedit ratione quis earum ipsa quasi id fugit veniam officia at ullam voluptatibus alias dolorem! Quaerat animi sint necessitatibus molestiae a quae numquam nesciunt culpa deleniti. Soluta, iure.
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam commodi, sunt quaerat magnam non recusandae fuga beatae deleniti sapiente rem labore nam impedit ratione quis earum ipsa quasi id fugit veniam officia at ullam voluptatibus alias dolorem! Quaerat animi sint necessitatibus molestiae a quae numquam nesciunt culpa deleniti. Soluta, iure.
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam commodi, sunt quaerat magnam non recusandae fuga beatae deleniti sapiente rem labore nam impedit ratione quis earum ipsa quasi id fugit veniam officia at ullam voluptatibus alias dolorem! Quaerat animi sint necessitatibus molestiae a quae numquam nesciunt culpa deleniti. Soluta, iure.
-    </p>
+                <div class="container-contact">
+                    <div class="form">    
+                        <div class="contact-info"></div>    
+                      
+                        <div class="contact-form">
+                            <span class="circle one"></span>
+                            <span class="circle two"></span>
+                        <form action="index.html">
+                            <h3 class="title">Contact us:</h3>
+
+                            <div class="input-container">
+                                <input type="text" name="name" class="input" />
+                                <label for="Username">User name</label>
+                            </div>
+
+                            <div class="input-container">
+                                <input type="email" name="email" class="input" />
+                                <label for="Username" >E-mail</label>
+                            </div>
+
+                            <div class="input-container">
+                                <input type="tel" name="phone" class="input" />
+                                <label for="Username">Phone</label>
+                            </div>
+
+                            <div class="input-container textarea ">
+                                <textarea name="message" class="input" cols="21" rows="10"></textarea>
+                                <label for="Message">Message</label>
+                            </div>
+                            <input type="submit" value="Send" class="btn" />
+                            
+                        </form>    
+                        </div>
+                    </div>
+                </div>
     <!--Fim do corpo central-->  
             </div>
         </section>
