--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="Index.html">
     <!--Main Start-->
     <div class="main">
+        <span class="circle one"></span>
+        <span class="circle two"></span>
 
         
         <section class="home-section ">
