--- a/contatos.html
+++ b/contatos.html
@@ -50,7 +50,7 @@
 
                             <div class="input-container">
                                 <input type="tel" name="phone" class="input" />
-                                <label for="Username">Phone</label>
+                                <label for="Username" placehoder="Phone">Phone</label>
                             </div>
 
                             <div class="input-container textarea ">
