atualizando menu contatos

--- a/contatos.html
+++ b/contatos.html
@@ -30,7 +30,26 @@
     <!--Inicio do corpo central-->            
                 <div class="container-contact">
                     <div class="form">    
-                        <div class="contact-info"></div>    
+                        <div class="contact-info">
+                            <h3 class="titulo-redes-sociais">Redes Sociais e contatos</h3>
+
+
+                            <div class="info">
+                                <div class="information">
+                                    <img src="./img/linkedin.jpg" class="icon" alt="logo linkedin">
+                                        <a href="https://www.linkedin.com/in/wanderson-dutra/">Linkedin</a>
+                                    <img src="./img/instagram.jpg"  class="icon" alt="logo linkedin">
+                                        <a href="https://www.instagram.com/dutra_g07/">Instagram</a>
+                                    <img src="./img/github.jpg"  class="icon" alt="logo linkedin">
+                                        <a href="https://github.com/Wandersondu">GitHub</a>
+                                </div>
+                                <div class="email">
+
+                                <div class="contato">
+
+                                </div>
+                            </div>
+                        </div>    
                       
                         <div class="contact-form">
                             <span class="circle one"></span>
