--- a/Sahara/index.html
+++ b/Sahara/index.html
@@ -5,26 +5,49 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap');
+    </style>
 </head>
 <body>
     
     <div class="container">
         <div class="navbar">
-            <img src="./Logo.png" alt="Logo" class="logo">
+            <img src="./img/logo.png" alt="logo">
             <nav>
                 <ul>
-                    <li><a href="./index.html">Home</a></li>
-                    <li><a href="./projects.html">Projects</a></li>
-                    <li><a href="./contacts.html">Contacts</a></li>
+                    <li><a href="Home">Home</a></li>
+                    <li><a href="Region">Region</a></li>
+                    <li><a href="About">About</a></li>
                 </ul>
             </nav>
+            <img src="./img/menu.png" alt="menu" class="menu-icon">
         </div>
 
         <div class="row">
             <div class="col">
-                <h1>Olá, eu sou Wanderson Dutra</h1>
-                <p class="text">Olá, meu nome é Wanderson Dutra atuando na área de IT desde 2012 como Suporte Técnico, Infraestrutura, BackOffice HelpDesk, e atualmente migrei para programação em Desenvolvimento Web Front-End. Desenvolvendo one-page e sites utilizando Html, Css, JavaScript e venho evoluindo cada dia mais com novas skills como o react.</p>
+                <h1>Sahara</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur inventore dolores sequi? Mollitia totam eaque labore odit repudiandae blanditiis provident sapiente tempora exercitationem?</p>
+                <button type="button">Explore</button>
+            </div>
+            <div class="col">
+                <div class="card card1">
+                    <h4>Western Desert</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, vitae!</p>
+                </div>
+                <div class="card card2">
+                    <h4>Ai Bagawat</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, vitae!</p>
+                </div>
+                <div class="card card3">
+                    <h4>Pyramid Of Gina</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, vitae!</p>
+                </div>
+                <div class="card card4">
+                    <h4>Kalahari Desert</h4>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, vitae!</p>
+                </div>
             </div>
         </div>
     </div>
