--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
                     
                     <ul class="nav-links">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="sobreMim.html">Sobre mim</a></li>
                         <li><a href="projetos.html">Projetos</a></li>
                         <li><a href="contatos.html">Contatos</a></li>
                     </ul>
@@ -40,7 +39,7 @@
                     <div class="texto">
                         <h3>Olá , Eu sou </h3>
                         <h1 class="nome"><span>Wanderson</span> <span>Dutra</span></h1>
-                        <p>Um Desenvolvedor Web Front-End apaixonado por criar web sites e conteúdos digitais, buscando cada vez mais experiências interativas na web. </p>
+                        <p>Olá, meu nome é Wanderson Dutra atuando na área de IT desde 2012 como Suporte Técnico, Infraestrutura, BackOffice HelpDesk, e atualmente migrei para programação em Desenvolvimento Web Front-End. Desenvolvendo one-page e sites utilizando Html, Css, JavaScript e venho evoluindo cada dia mais com novas skills como o react.</p>
                     </div>
                 </div>
     <!--Fim do corpo central-->  
