--- a/Sahara/index.html
+++ b/Sahara/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;700&display=swap');
-    </style>
+    <script src="https://kit.fontawesome.com/79ee3d7a0e.js" crossorigin="anonymous"></script>
 </head>
 <body>
     
