--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
                         <h3>Olá , Eu sou </h3>
                         <h1 class="nome"><span>Wanderson</span> <span>Dutra</span></h1>
                         <p>Olá, meu nome é Wanderson Dutra atuando na área de IT desde 2012 como Suporte Técnico, Infraestrutura, BackOffice HelpDesk, e atualmente migrei para programação em Desenvolvimento Web Front-End. Desenvolvendo one-page e sites utilizando Html, Css, JavaScript e venho evoluindo cada dia mais com novas skills como o react.</p>
+
+                        <p><strong>  Portfolio em construção....</p>
                     </div>
                 </div>
     <!--Fim do corpo central-->  
