--- a/contatos.html
+++ b/contatos.html
@@ -27,7 +27,14 @@
                 </nav>
     <!--Fin da barrea de menus-->          
     <!--Inicio do corpo central-->            
-               
+               <div class="container">
+                   <div class="contatos">
+                    
+                   </div>
+                   <div class="mensagem">
+
+                   </div>
+               </div>
     <!--Fim do corpo central-->  
             </div>
         </section>
