--- a/projetos.html
+++ b/projetos.html
@@ -29,27 +29,27 @@
     <!--Inicio do corpo central-->            
                 <div class="projetos">
                     <div class="card card1">                       
-                        <a class="link-projetos" href="./BarberShop/index.html">Barber Shop</a>
+                        <a class="link-projetos" href="./BarberShop/index.html" id="link">Barber Shop</a>
                     </div>
 
                     <div class="card card2">                        
-                        <a class="link-projetos" href="./Curriculo/curriculo.html">Curriculo</a>
+                        <a class="link-projetos" href="./Curriculo/curriculo.html" id="link">Curriculo</a>
                     </div>
 
                     <div class="card card3">                      
-                        <a class="link-projetos" href="./FichaCadastro/index.html"> Ficha de Cadastro</a>
+                        <a class="link-projetos" href="./FichaCadastro/index.html" id="link">Cadastro</a>
                     </div>
 
                     <div class="card card4">                        
-                        <a class="link-projetos" href="./ProjetoMenu/">Menu Interativo</a>
+                        <a class="link-projetos" href="./ProjetoMenu/" id="link">Menu</a>
                     </div>
 
                     <div class="card card5">                       
-                        <a class="link-projetos" href="./ToDoList/index.html">Lista de Tarefas</a>
+                        <a class="link-projetos" href="./ToDoList/index.html" id="link">Lista </a>
                     </div>
                     
                     <div class="card card6">                        
-                        <a class="link-projetos" href="./Sahara/index.html">Sahara</a>
+                        <a class="link-projetos" href="./Sahara/index.html" id="link">Sahara</a>
                     </div>
 
                     
