--- a/contatos.html
+++ b/contatos.html
@@ -33,19 +33,19 @@
                    <div class="formulario">
                        
                        <label for="name">Name:</label>
-                       <input type="text" id="name" placeholder="Digite seu nome">
+                       <input type="text" id="name" placeholder="Digite seu nome:">
                        <small class="error"></small>
                        
                        <label for="email">Email:</label>
-                       <input type="email" id="email" placeholder="Digite seu E-mail">
+                       <input type="email" id="email" placeholder="Digite seu E-mail:">
                         <small class="error"></small>
 
-                        <label for="message">Message</label>
-                        <textarea name="message" id="message" cols="30" rows="10" placeholder="Digite sua mensagem"></textarea>
+                        <label for="message">Message:</label>
+                        <textarea name="message" id="message" cols="30" rows="10" placeholder="Digite sua mensagem:"></textarea>
                         <small class="error"></small>
 
                         <div class="center">
-                            <input type="submit" value="Enviar">
+                            <input class="btn" type="submit" value="Enviar">
                             <p class="" id="success"></p>
                         </div>
                         <div class="social">
