--- a/BarberShop/index.html
+++ b/BarberShop/index.html
@@ -47,7 +47,7 @@
                 <img src="much-img.png" alt="baber Shop" class="bigode">
             </div>
         </section>
-
+        <!--------------------about------------------------>
         <section class="about"> 
             <div class="container">
                 <div class="timing">
@@ -85,15 +85,15 @@
                     <div class="text">
                         <div>
                             <p>
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum alias placeat eligendi numquam repellendus accusamus similique error perspiciatis hic sed facilis, deserunt, earum ex laudantium iste vitae officiis pariatur explicabo.
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                             </p>
 
                             <p>
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum alias placeat eligendi numquam repellendus accusamus similique error perspiciatis hic sed facilis, deserunt, earum ex laudantium iste vitae officiis pariatur explicabo.
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                             </p>
 
                             <p>
-                                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsum alias placeat eligendi numquam repellendus accusamus similique error perspiciatis hic sed facilis, deserunt, earum ex laudantium iste vitae officiis pariatur explicabo.
+                                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
                             </p>
                         </div>
 
