--- a/projetos.html
+++ b/projetos.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/79ee3d7a0e.js" crossorigin="anonymous"></script>
     
 </head>
 <body>
-    <link rel="stylesheet" href="Index.html">
     <!--Main Start-->
     <div class="main">
                 
