--- a/Sahara/index.html
+++ b/Sahara/index.html
@@ -26,7 +26,7 @@
         <div class="row">
             <div class="col">
                 <h1>Sahara</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur inventore dolores sequi? Mollitia totam eaque labore odit repudiandae blanditiis provident sapiente tempora exercitationem?</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                 <button type="button">Explore</button>
             </div>
             <div class="col">
