--- a/index.html
+++ b/index.html
@@ -136,10 +136,9 @@
         </section>
         <!-- FIM PROJETOS -->
         <!-----INICIO CONTATOS----->
-        <section class="contatos">
-            <h1>Contatos</h1>
+        <section class="formulario">
+            <h1 class="titleContatos">Contatos</h1>
             <div class="contatos" id="overlay">
-                <div class="formulario">
                     
                     <label for="name">Name:</label>
                     <input type="text" id="name" placeholder="Digite seu nome:" required>
@@ -180,7 +179,6 @@
                               <i href="" class="fa-brands fa-github"></i></a>
                           </div>
                      </div>
-                 </div>
             </div>
         </section>
         <!-----FIM CONTATOS----->
