--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
         <section class="formulario">
             <h1 class="titleContatos">Contatos</h1>
             <div class="contatos" id="overlay">
-                    
+                <div class="dados">   
                     <label for="name">Name:</label>
                     <input type="text" id="name" placeholder="Digite seu nome:" required>
                     <small class="error"></small>
@@ -166,12 +166,13 @@
                          <input class="btn" type="submit" value="Enviar">
                          <p class="" id="success"></p>
                      </div>
+                </div>  
+                <div class="social-midia">   
                      <!--Inicio do midia-->  
                      <div class="social">
                          <p>Social midia</p>
                      </div>
                      <div class="midia">
-                         
                          <div class="linkedin">
                              <a href="linkedin.com/in/wanderson-dutra">
                               <i class="fa-brands fa-linkedin"></i>
@@ -189,6 +190,7 @@
                               <i href="" class="fa-brands fa-github"></i></a>
                           </div>
                      </div>
+                </div>
             </div>
         </section>
         <!-----FIM CONTATOS----->
