novos arquivos css

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                     <input type="text" id="name" placeholder="Digite seu nome:" required>
                     <small class="error"></small>
                     
-                    <label for="email">Email:</label>
+                    <label for="email">E-mail:</label>
                     <input type="email" id="email" placeholder="Digite seu E-mail:" required>
                      <small class="error"></small>
 
