atualizaçao responsive css

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         
         <!--------------- INICIO HOME --------------->
         
-        <section id="home">
+        <section>
             <div class="home">
                 <div class="home-img" id="img">
                     <img class="logo" src="./logotop.jpg" alt="">
