css responsive phone

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 
         <!-- FIM HABILIDADES -->
-        <!--  TESTE  -->
+        
         <section class="habilidades"  id="habilidades">
             
             <div class="box">
@@ -117,7 +117,6 @@
 
             </div>           
         </section>
-        <!-- FIM TESTE -->
 
         <!-- INICIO PROJETOS -->
 
@@ -208,10 +207,12 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3112.848933786659!2d-9.14374428426509!3d38.721277179598076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd1933830b60b8fd%3A0x76277e5b757c4c4f!2sR.%20de%20Santo%20Ant%C3%B3nio%20dos%20Capuchos%2056%2C%201150-315%20Lisboa!5e0!3m2!1spt-PT!2spt!4v1655162457963!5m2!1spt-PT!2spt" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
                 </div>
+
+                <footer>
+                    <p class="footer">Desenvolvido por <span class="footer">Wanderson Dutra</span> | Todos os direiros reservados &copy; 2022</p>
+                </footer>
             </div>
-            <footer>
-                <p>Desenvolvido por <span class="footer">Wanderson Dutra</span> | Todos os direiros reservados &copy; 2022</p>
-            </footer>
+
         </section>
         <!-----FIM CONTATOS----->
 
