atualizaçao css home

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Portfolio</title>
     <!-- Google Fontes -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
     <!-- Fonto Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- Estilo de Aplicação-->
@@ -68,11 +68,15 @@
                 <div class="home-img" id="img">
                    <img class="logo" src="./logotop.jpg" alt=""> 
                 </div>
-                <div class="home-text" id="text">
-                    <p>Olá, meu nome é</p>
-                    <h2 class="home-card-title">Wanderson R. Dutra</h2>
-                    <p>Junior Frontend Developer</p>
-                </div>
+
+                    <div class="home-text" id="text">
+                        <div class="estatico">Eu sou</div>
+                        <ul class="dinamico">
+                            <li><span>Desenvolvedor</span></li>
+                            <li><span>Freelancer</span></li>
+                            <li><span>Influencer</span></li>
+                        </ul>
+                    </div>
             </div>
         </section>
         
@@ -150,7 +154,7 @@
                 </div>   
 
                 <div class="card card6">                        
-                    <a class="link" href="./ficha-cadastro.png" id="link">Ficha de cadastro</a>
+                    <a class="link" href="./ficha-cadastro.png" id="link">Ficha</a>
                     <img class="foto-logo" src="./ficha-cadastro.png" alt="foto">
                 </div>  
             </div>           
